# situation-room

./: .env.example  .gitignore  Cargo.toml  N3_SMITHERY_MCP_PLAN.md  N4_SMITHERY_MCP_PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.bolt/: prompt
docs/: desktop-notifications.md  fix-force-logout-401.md  flight-radar-setup.md  smithery-mcp-integration.md  voice-mode-detailed-setup.md  voice-mode-fix.md  watchlist-chart-navigation.md  youtube-feed-fix.md
src/: App.tsx  api.rs  app.rs  event.rs  index.css  main.rs  music.rs  tui.rs  ui.rs
src/components/: AlertsPanel.tsx  AviationPanel.tsx  ConversationModeButton.tsx  Footer.tsx  ForecastsPanel.tsx  Header.tsx  LogisticsPanel.tsx  MCPConnectionsPanel.tsx  MarketsPanel.tsx  ModeSidebar.tsx  NewsPanel.tsx  OfficialComms.tsx  Panel.tsx  PizzaIndex.tsx  ProtectedRoute.tsx  SportsPanel.tsx  Toast.tsx  UserMenu.tsx  WorldClocks.tsx  WorldMap.tsx
src/context/: AuthContext.tsx  PlatformContext.tsx  WatchlistContext.tsx
src/data/: crypto.rs  finance.rs  flights.rs  mod.rs  news.rs  pizza.rs  sports.rs
src/hooks/: useAIChat.ts  useAIChatParticipant.ts  useAlerts.ts  useChatSTT.ts  useChatTTS.ts  useCommercialShipping.ts  useConversations.ts  useCriticalInfrastructure.ts  useDataFeed.ts  useDocumentAttachment.ts  useFileTransfer.ts  useFlightInterpolation.ts  useFlightSearch.ts  useFlightsDashboard.ts  useGroupVoiceChat.ts  useLinkPreview.ts  useLiveTvSettings.ts  useMapLayers.ts  useMarketsDashboard.ts  useMessageNotifications.ts  useMessaging.ts  useToast.ts  (+5 more)
(+147 files in other folders)
