[package]
name = "sitch-cast"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenv = "0.15.0"
futures = "0.3.31"
rand = "0.9.2"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
